@@ -10,6 +10,7 @@ import pytest
 from pint import (
     Context,
     DimensionalityError,
+    UndefinedUnitError,
     UnitRegistry,
     get_application_registry,
 )
@@ -1368,3 +1369,9 @@ def test_issue2172():
 
     mass.ito("m**3", density=958.05 * ureg.kilogram / ureg.meter**3)
     assert mass.m == pytest.approx(1.0437868587234487)  # 100 C
+
+
+def test_issue2199(func_registry):
+    msg = "is not defined in the unit registry"
+    with pytest.raises(UndefinedUnitError, match=msg):
+        func_registry.Quantity.from_tuple((1, (("wrong", 1),)))
